# video-marketplace-app

./: .abacus.donotdelete  .analyze.txt  .cursorrules  .gitignore  APK_BUILD_REPORT_3.16.9.md  BUILD_SUMMARY.md  CHANGELOG.md  CURRENT_ISSUES.md  FINAL_SESSION_SUMMARY.md  FINAL_TODO.md  FINAL_WORK_COMPLETED.md  FIREBASE_GIT_COMMIT_REPORT.md  FIXES_REPORT.md  GITHUB_RELEASE_INSTRUCTIONS.md  GITHUB_RELEASE_REPORT.md  GIT_COMMIT_REPORT.md  NEXT_STEPS.md  README.md  RELEASE_SUMMARY.md  TESTING_INSTRUCTIONS.md  TODO.md  TZ.md  WORK_COMPLETED.md  firebase_billing_storage_report.md  firebase_checklist.md  firebase_status_summary.md  firebase_storage_config.md  pubspec.yaml  tz_progress_report.md  tz_progress_summary.md  tz_progress_visual.md
android/: build.gradle
backend/: .env.example  Dockerfile  README.md  fly.toml  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/app/: __init__.py  auth.py  config.py  db.py  main.py  s3_uploads.py
backend/deploy/: README_SERVER.md  gogomarket-backend.service
backend/src/: app.ts
backend/src/config/: database.ts  index.ts
backend/src/controllers/: authController.ts  orderController.ts  productController.ts  videoController.ts
backend/src/middleware/: auth.ts  errorHandler.ts  validation.ts
backend/src/models/: Address.ts  Dispute.ts  Order.ts  Product.ts  Review.ts  Transaction.ts  User.ts  Video.ts  index.ts
backend/src/routes/: authRoutes.ts  index.ts  orderRoutes.ts  productRoutes.ts  videoRoutes.ts
backend/src/services/: qrService.ts  smsService.ts
backend/src/types/: index.ts
(+214 files in other folders)
