[tool.poetry]
name = "gogomarket-api"
version = "2.0.0"
description = "GoGoMarket API with PostgreSQL"
authors = ["GoGoMarket Team"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.0"}
asyncpg = "^0.29.0"
pyjwt = "^2.8.0"
pydantic = {extras = ["email"], version = "^2.5.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
